# Equitas

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start-guardian.sh
backend/examples/: basic_usage.py
backend/fairsight_sdk/: __init__.py  client.py  exceptions.py  models.py
backend/guardian/: main.py
backend/guardian/api/v1/: logging.py
backend/guardian/core/: auth.py  config.py
backend/guardian/models/: database.py  schemas.py
backend/guardian/services/: custom_classifiers.py
backend/tests/: test_sdk.py
backend_api/api/v1/: incidents.py  users.py
